--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   http: ^1.2.1
+  image_field: ^0.0.9
 
 dev_dependencies:
   flutter_test:
