--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   flutter_gen: any
   isbn: ^1.0.4
   flash: ^3.1.0
+  light_sensor: ^3.0.0
+  simple_barcode_scanner: ^0.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
