--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flash: ^3.1.0
   light_sensor: ^3.0.0
   simple_barcode_scanner: ^0.1.1
+  nfc_manager: ^3.4.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
