--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   light_sensor: ^3.0.0
   simple_barcode_scanner: ^0.1.1
   nfc_manager: ^3.4.0
+  animated_splash_screen: ^1.3.0
+  lottie: ^3.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
